[gd_scene load_steps=4 format=3 uid="uid://068io0o7p4n7"]

[ext_resource type="Script" path="res://Galaxy/Stars/Star_List/blue_giant.gd" id="1_53j4a"]
[ext_resource type="Texture2D" uid="uid://0hwcjxcmimpq" path="res://Sprites/BlueGiant.png" id="1_rfx1q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qx08h"]
radius = 125.0

[node name="Blue_Giant" type="StaticBody2D"]
script = ExtResource("1_53j4a")
metadata/_edit_lock_ = true

[node name="BlueGiantImage" type="Sprite2D" parent="."]
texture = ExtResource("1_rfx1q")

[node name="BG_Radius" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qx08h")
